--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="Sc1.js"></script>
     <script type="text/javascript" src="Sc2.js"></script>
     <script type="text/javascript" src="Sc3.js"></script>
+    <script type="text/javascript" src="Sc4.js"></script>
     <script type="text/javascript" src="game.js"></script>
 
     <style type="text/css">
